tests/baselines/reference/indexSignatureMustHaveTypeAnnotation.errors.txt
tests/cases/compiler/indexSignatureMustHaveTypeAnnotation.ts(2,5): error TS1169: Computed property names are not allowed in interfaces.
tests/cases/compiler/indexSignatureMustHaveTypeAnnotation.ts(7,5): error TS1166: Computed property names are not allowed in class property declarations.
tests/cases/compiler/indexSignatureMustHaveTypeAnnotation.ts(3,5): error TS1021: An index signature must have a type annotation.
tests/cases/compiler/indexSignatureMustHaveTypeAnnotation.ts(12,5): error TS1021: An index signature must have a type annotation.


==== tests/cases/compiler/indexSignatureMustHaveTypeAnnotation.ts (4 errors) ====
    interface I {
        [x]: string;
        ~~~
!!! error TS1169: Computed property names are not allowed in interfaces.
        [x: string];
        ~~~~~~~~~~~~
!!! error TS1021: An index signature must have a type annotation.
    }
    
    class C {
        [x]: string
        ~~~
!!! error TS1166: Computed property names are not allowed in class property declarations.
        
    }
    
    class C2 {
        [x: string]
        ~~~~~~~~~~~
!!! error TS1021: An index signature must have a type annotation.
    }